--- a/.github/workflows/pull-request-rfc.yml
+++ b/.github/workflows/pull-request-rfc.yml
@@ -9,18 +9,36 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
+            const RFC_CAT_ID = 'DIC_kwDOHwUU6s4CQkn_'
             const files_url = context.payload.pull_request.url + '/files'
             const diff = await github.request(files_url)
             const addedFiles = diff.data.filter(i => i.status === 'added')
-            console.log({ addedFiles: addedFiles.map(i=>i.filename) })
             const rfcFile = addedFiles.find(i => i.filename.startsWith('rfcs/') && i.filename.endsWith('.md'))
 
             if (!rfcFile) {
-              console.log('No RFC file found')
+              console.log('No RFC file found. Skipped.')
               return
             }
 
-            const renderedUrl = context.payload.pull_request.head.repo.html_url + '/tree' + context.payload.pull_request.head.ref + '/' + rfcFile.filename
+            const repoUrl = context.payload.pull_request.base.repo.html_url
+            const renderedUrl = context.payload.pull_request.head.repo.html_url + '/blob/' + context.payload.pull_request.head.ref + '/' + rfcFile.filename
+            
+            const discussionBody = [
+               `[Rendered RFC](${renderedUrl})`,
+               '',
+               `[Pull Request](${context.payload.pull_request.html_url})`
+            ].join('\\n')
+            const query = `mutation {
+              createDiscussion(input: { repositoryId: "${context.payload.pull_request.base.repo.node_id}", categoryId: "${RFC_CAT_ID}", body: "${discussionBody}", title: "${context.payload.pull_request.title}"}) {
+                discussion {
+                  id
+                }
+              }
+            }`
+            const result = await github.graphql(query)
+            console.log(result)
+
+            console.log('RFC file found ' + renderedUrl)
 
             await github.rest.issues.addLabels({
               issue_number: context.issue.number,
