--- a/.github/workflows/pull-request-rfc.yml
+++ b/.github/workflows/pull-request-rfc.yml
@@ -38,6 +38,8 @@ jobs:
             }
             else {
               const discussionBody = [
+                'This is an [RFC](https://github.com/vitejs/vite/rfcs). To participle the process, please read thoroughly about the proposal and then provide feedback or join the discussion below.',
+                '',
                 `[Full Rendered Proposal](${renderedUrl})`,
                 '',
                 `RFC Pull Request: ${context.payload.pull_request.html_url}`
@@ -66,16 +68,13 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: [
-                'This is an RFC pull request.',
+                'This is an [RFC](https://github.com/vitejs/vite/rfcs) pull request. To participle the process, please read thoroughly about the proposal and provide feedback in the discussion with the link below.',
                 '',
-                `[Full Rendered Proposal](${renderedUrl})`,
+                `[📖 Full Rendered Proposal](${renderedUrl})`,
+                `[💬 Discussion Thread](${discussionUrl})`,
                 '',
-                `[Discussion Thread](${discussionUrl})`,
-                '',
-                '----',
-                '',
-                '> **Note**',
-                '> **Important: Do NOT comment on this PR. Please use the discussion thread linked above to provide feedback, as it provides branched discussions that are easier to follow. This also makes the edit history of the PR clearer.**'
+                '> **Node**',
+                '> **Do NOT comment on this PR. Please use the discussion thread linked above to provide feedback, as it provides branched discussions that are easier to follow. This also makes the edit history of the PR clearer.**'
               ].join('\n')
             })
 
