--- a/.github/workflows/pull-request-rfc.yml
+++ b/.github/workflows/pull-request-rfc.yml
@@ -1,6 +1,8 @@
 name: RFC Pull Request
 
-on: pull_request
+on:
+  pull_request:
+    - open
 
 jobs:
   label:
@@ -9,18 +11,53 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
+            const RFC_CAT_ID = 'DIC_kwDOHwUU6s4CQkn_'
+
             const files_url = context.payload.pull_request.url + '/files'
             const diff = await github.request(files_url)
             const addedFiles = diff.data.filter(i => i.status === 'added')
-            console.log({ addedFiles: addedFiles.map(i=>i.filename) })
-            const rfcFile = addFiles.find(i => i.filename.startsWith('rfcs/') && i.filename.endsWith('.md'))
+            const rfcFile = addedFiles.find(i => i.filename.startsWith('rfcs/') && i.filename.endsWith('.md'))
 
             if (!rfcFile) {
-              console.log('No RFC file found')
+              console.log('No RFC file found. Skipped.')
               return
             }
 
-            const renderedUrl = context.payload.pull_request.head.repo.html_url + '/tree' + context.payload.pull_request.head.ref + '/' + rfcFile.filename
+            function escapeRegExp(string) {
+              return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')
+            }
+
+            const repoUrl = context.payload.pull_request.base.repo.html_url
+            const discussionUrlRegex = new RegExp(escapeRegExp(repoUrl + '/discussions/') + '\\d+')
+            const renderedUrl = context.payload.pull_request.head.repo.html_url + '/blob/' + context.payload.pull_request.head.ref + '/' + rfcFile.filename
+            let discussionUrl
+
+            console.log('RFC file found ' + renderedUrl)
+
+            const existingDiscussion = context.payload.pull_request.body?.match(discussionUrlRegex)
+            if (existingDiscussion?.[0]) {
+              discussionUrl = existingDiscussion?.[0]
+              console.log('Existing Discussion found ' + discussionUrl)
+            }
+            else {
+              const discussionBody = [
+                'This is an [RFC](https://github.com/vitejs/vite/rfcs) proposal. To participle the process, please read thoroughly about the proposal and then provide feedback or join the discussions below.',
+                '',
+                `[Full Rendered Proposal](${renderedUrl})`,
+                '',
+                `RFC Pull Request: ${context.payload.pull_request.html_url}`
+              ].join('\\n')
+              const query = `mutation {
+                createDiscussion(input: { repositoryId: "${context.payload.pull_request.base.repo.node_id}", categoryId: "${RFC_CAT_ID}", body: "${discussionBody}", title: "${context.payload.pull_request.title}"}) {
+                  discussion {
+                    url
+                  }
+                }
+              }`
+              const result = await github.graphql(query)
+              discussionUrl = result.createDiscussion.discussion.url
+              console.log('Discussion created ' + discussionUrl)
+            }
 
             await github.rest.issues.addLabels({
               issue_number: context.issue.number,
@@ -34,13 +71,29 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: [
-                'This is an RFC pull request.',
+                'This is an [RFC](https://github.com/vitejs/vite/rfcs) pull request. To participle the process, please read thoroughly about the proposal and provide feedback in the discussion thread with the link below.',
                 '',
-                `[Rendered RFC](${renderedUrl})`,
+                `[📖 Full Rendered Proposal](${renderedUrl})`,
+                ''
+                `[💬 Discussion Thread](${discussionUrl})`,
                 '',
-                `[Discussion Thread](...)`,
+                '<br>',
                 '',
                 '> **Note**',
-                '> **Important: Do NOT comment on this PR. Please use the discussion thread linked above to provide feedback, as it provides branched discussions that are easier to follow. This also makes the edit history of the PR clearer.**'
+                '> **Do NOT comment on this PR. Please use the discussion thread linked above to provide feedback, as it provides branched discussions that are easier to follow. This also makes the edit history of the PR clearer.**'
               ].join('\n')
             })
+
+# To get category ID, execute following GraphQL in https://docs.github.com/en/graphql/overview/explorer
+# query {
+#   repository(owner: "vitejs", name: "vite") {
+#     discussionCategories(first: 10) {
+#       edges {
+#         node {
+#           name
+#           id
+#         }
+#       }
+#     }
+#   }
+# }
